# youtube-transcriber

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/: copilot-instructions.md
docs/: setup-claude-desktop.md  youtube-transcribe.skill.md
docs/lessons-learned/: 2026-03-02-vad-and-nodejs-fixes.md
src/youtube_transcriber/: __init__.py  cli.py  downloader.py  formatters.py  logging_config.py  transcriber.py  utils.py
tests/: test_formatters.py  test_utils.py
