[project]
name = "youtube-transcriber"
version = "0.2.1"
description = "Download YouTube audio and transcribe locally using faster-whisper. Designed for LLM ingestion via CLI."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Steve Overton" }]
requires-python = ">=3.10"
keywords = ["youtube", "transcription", "whisper", "speech-to-text", "ai", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "yt-dlp>=2024.1.1",
    "faster-whisper>=1.0.0",
    "click>=8.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.4.0",
]
# Apple Silicon: GPU-accelerated transcription via Apple MLX framework.
# Install with: uv sync --extra mlx
# mlx-whisper uses Metal GPU and Apple Neural Engine instead of CPU.
mlx = [
    "mlx-whisper>=0.4.0",
]

[project.scripts]
youtube-transcriber = "youtube_transcriber.cli:cli"

[project.urls]
Homepage = "https://github.com/Steve0verton/youtube-transcriber"
Repository = "https://github.com/Steve0verton/youtube-transcriber"
Issues = "https://github.com/Steve0verton/youtube-transcriber/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/youtube_transcriber"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501", # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["youtube_transcriber"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
